--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "sedermain",
+  "name": "rased",
   "version": "1.0.0",
-  "description": "Admin Application for all requiered request",
+  "description": "AI to record quantity, and analysis behavior of people in a video from public or private cameras",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Ryan Kutbi",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.6.1",
+    "eslint": "^5.2.0",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.1",
@@ -21,6 +26,6 @@
     "validator": "^9.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.3"
+    "nodemon": "^1.18.3"
   }
 }
